# pe-lang

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
assets/: template.py
output/: Pipfile  generated.py
output/binaries/: setup-md5.txt
output/pe_analyzer/: pe_analyzer.py
output/pe_analyzer/tests/: test_pe_analyzer.py
src/: main.c
src/backend/code-generation/: generator.c  generator.h
src/backend/semantic-analysis/: abstract-syntax-tree.h  type-checking.h
src/backend/semantic-analysis/ast/: ast.h
src/backend/semantic-analysis/ast/actions/: program.c  program.h
src/backend/semantic-analysis/ast/actions/assignment/: assignment.c  assignment.h
src/backend/semantic-analysis/ast/actions/constant/: constant.c  constant.h
src/backend/semantic-analysis/ast/actions/declaration/: declaration.c  declaration.h
src/backend/semantic-analysis/ast/actions/expression/: expression.c
src/backend/semantic-analysis/ast/actions/factor/: factor.c  factor.h
src/backend/semantic-analysis/ast/actions/for/: for.c  for.h
src/backend/semantic-analysis/ast/actions/functions/: functions.c  functions.h
src/backend/semantic-analysis/ast/actions/if/: if.c  if.h
src/backend/semantic-analysis/ast/actions/instructions/: instructions.c  instructions.h
src/backend/semantic-analysis/ast/actions/member/: member.c  member.h
src/backend/semantic-analysis/ast/actions/property/: property.c
src/backend/semantic-analysis/ast/actions/statement/: statement.c  statement.h
src/backend/semantic-analysis/ast/actions/vector/: vector.h
src/backend/semantic-analysis/ast/actions/while/: while.c  while.h
src/backend/semantic-analysis/ast/types/: expression.h  factor.h  instruction.h  instructions.h  member.h  program.h  property.h  var-types.h
src/backend/semantic-analysis/ast/types/conditionals/if/: if-closure.h
src/backend/semantic-analysis/ast/types/structures/: vector.h
src/backend/semantic-analysis/scope/: context.c  context.h
src/backend/semantic-analysis/symbol-scope/context/: context.c  context.h
src/backend/semantic-analysis/symbol-scope/scope/: context.c
src/backend/semantic-analysis/symbol-scope/symbol-table/: symbol-table.c  symbol-table.h
src/backend/semantic-analysis/symbol-table/: symbol-table.c  symbol-table.h
src/backend/semantic-analysis/type-checker/: type-checker.c  type-checker.h
src/backend/semantic-analysis/types/: block.h  declaration.h  instruction.h  statement.h
src/backend/semantic-analysis/types/assignment/: assignment.h  full-assignment.h
src/backend/semantic-analysis/types/conditionals/if/: if-closure.h  if.h
src/backend/semantic-analysis/types/functions/non-void/: pe-open.h
src/backend/semantic-analysis/types/loops/for/: for-loop-declaration.h
src/backend/support/: assert.c  assert.h  file.h  logger.h  output-builder.c  output-builder.h  shared.h
src/backend/support/shared/: shared.h
src/backend/support/shared/scope/: context.h
src/backend/support/shared/symbol-table/: symbol-table.h
src/backend/support/shared/types/: block.h  declaration.h  expression.h  member.h  parameters.h  types.h  var-types.h
src/backend/support/shared/types/assignment/: full-assignment.h
src/backend/support/shared/types/structures/: constant.h  token.h
src/frontend/lexical-analysis/: flex-actions.c  flex-actions.h  flex-patterns.l
src/frontend/syntactic-analysis/: bison-actions.c  bison-actions.h  bison-grammar.y
src/frontend/syntactic-analysis/actions/: program.h
src/frontend/syntactic-analysis/actions/block/: block.c  block.h
src/frontend/syntactic-analysis/actions/expression/: expression.c  expression.h
src/frontend/syntactic-analysis/actions/functions/: functions.h
src/frontend/syntactic-analysis/actions/property/: property.h
src/frontend/syntactic-analysis/actions/vector/: vector.c
test/accept/: assign_valid_type  detect_cpu_arch  full_assign_valid_type  full_dump  if_condition  if_condition_nested  list_executable_sections  peopen_identifier  print_export_symbols  print_file_header  print_hello_world  print_import_symbols  print_optional_header  struct_member_chaining  valid_struct_member  var_scope  vector_definition  while_loop
test/reject/: access_invalid_member  bad_function_parameter  malformed_brackets  missing_semicolon  non_iterable_type  scope_redefinition  type_mismatch  uninitialized_var_expression  unknown_struct_member  unknown_symbol  void_function_assignment
(+9 files in other folders)
